--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
